# cppscanner

./: .gitignore  CMakeLists.txt  README.md
.gitea/workflows/: build.yaml
apps/: CMakeLists.txt
apps/scanner/: CMakeLists.txt  main.cpp  merge.cpp  run.cpp
docker/: Dockerfile
modules/: CMakeLists.txt
modules/cppscanner/base/: config.h  env.cpp  env.h  os.h  version.h
modules/cppscanner/cmakeIntegration/: cmakeproject.cpp  cmakeproject.h
modules/cppscanner/database/: database.cpp  database.h  readrows.h  sql.cpp  sql.h  transaction.h
modules/cppscanner/index/: access.h  baseof.cpp  baseof.h  declaration.h  diagnostic.cpp  diagnostic.h  file.cpp  file.h  fileid.h  fileposition.cpp  fileposition.h  include.h  override.h  refarg.h  reference.h  relation.cpp  relation.h  symbol.cpp  symbol.h  symbolid.cpp  symbolid.h  symbolkind.h  symbolrecords.h
modules/cppscanner/indexer/: argumentsadjuster.h  astvisitor.cpp  astvisitor.h  basicfileidentificator.cpp  basicfileidentificator.h  fileidentificator.cpp  fileidentificator.h  fileindexingarbiter.cpp  fileindexingarbiter.h  frontendactionfactory.cpp  frontendactionfactory.h  glob.cpp  glob.h  indexer.cpp  indexer.h  indexersymbol.h  indexingresultqueue.h  scanner.cpp  scanner.h  snapshot.cpp  snapshot.h  snapshotcreator.cpp  snapshotcreator.h  snapshotreader.cpp  snapshotreader.h  snapshotwriter.cpp  snapshotwriter.h  symbolrecorditerator.h  threadsafefileidentificator.cpp  threadsafefileidentificator.h  translationunitindex.cpp  translationunitindex.h  vector-of-bool.h  version.h  workqueue.h
modules/cppscanner/scannerInvocation/: cmakeinvocation.cpp  cmakeinvocation.h  compilecommandsgenerator.h  mergeinvocation.cpp  mergeinvocation.h  scannerinvocation.cpp  scannerinvocation.h
modules/cppscanner/snapshot/: indexersymbol.h  merge.cpp  merge.h  snapshot.cpp  snapshot.h  snapshotreader.cpp  snapshotreader.h  snapshotwriter.cpp  snapshotwriter.h  symbolrecorditerator.h
plugin/: CMakeLists.txt  plugin.cpp
src/: CMakeLists.txt  cmake.cpp  main.cpp  merge.cpp  run.cpp
tests/: CMakeLists.txt  cmakeintegration.cpp  cpp20_language_features.cpp  cpp20_library_features.cpp  cpp20_modules.cpp  cppscanner-cmake.h.in  cxx_language_features.cpp  hello_world.cpp  helpers.h  main.cpp  pch.cpp  projects.h.in  selftest.cpp  simple_project.cpp  stl.cpp
tests/cpp20_language_features/: CMakeLists.txt  designated-initializers.cpp  main.cpp  spaceship.h
tests/cxx_language_features/: CMakeLists.txt  converting-constructor.cpp  enum.h  gotolabel.cpp  lambda.cpp  macro.cpp  macro.h  main.cpp  namespace.cpp  namespace.h  template.h
tests/hello_world/: CMakeLists.txt  hello.cpp  hello.h
tests/simple_project/: CMakeLists.txt  main.cpp  main.h
tests/stl/: CMakeLists.txt  optional.cpp  tuple.cpp  variant.cpp  vector.cpp
tests/testfiles/: CMakeLists.txt
tests/testfiles/cpp20_language_features/: CMakeLists.txt  concepts.cpp  concepts.h  main.cpp  spaceship.cpp
tests/testfiles/cpp20_library_features/: CMakeLists.txt  format.cpp  format.h  main.cpp
tests/testfiles/cpp20_modules/: Hello.cppm  main.cpp
tests/testfiles/cxx_language_features/: CMakeLists.txt  datamembers.cpp  declarations.cpp  function.cpp  include.cpp  include.h  inheritance.cpp  pass-by-reference.cpp  template.h
tests/testfiles/stl/: CMakeLists.txt  string.cpp  tuple.cpp
tests/testprojects/cmake_compile_definitions/: CMakeLists.txt  main.cpp
tests/testprojects/cmake_precompile_headers/: CMakeLists.txt  a.h  b.h  c.h  main.cpp  precompile.h
tests/testprojects/hello_world/: main.cpp
tests/testprojects/includedir/: CMakeLists.txt  main.cpp
tests/testprojects/includedir/include/: defines.h
tests/testprojects/precompiled_headers/: CMakeLists.txt
tests/testprojects/simple_project/: CMakeLists.txt  main.cpp  palindrome.cpp  palindrome.h  print.cpp  print.h
tools/: CMakeLists.txt  main.cpp
